--- a/src/pages/blog/2022-06-21-tailwind-templates-and-all-access/index.mdx
+++ b/src/pages/blog/2022-06-21-tailwind-templates-and-all-access/index.mdx
@@ -1,33 +1,15 @@
 import { adamwathan } from '@/authors'
 import card from './card.jpg'
-import teamManagementScreenshot from './team-management.png'
-import playGeneratedCssScreenshot from './play-generated-css.png'
-import tailwindCssLanguageModeScreenshot from './tailwindcss-language-mode.png'
-import refactoringUiHomepageScreenshot from './refactoring-ui-homepage.png'
-import documentationTemplateTeaserScreenshot from './documentation-template-teaser.jpg'
+import templates from './templates.jpg'
 
 export const meta = {
-  // title: 'Website templates and Tailwind UI all-access',
-  // title: 'Site templates, all-access, and a brand new website for Tailwind UI',
-  // title: 'Production-ready templates, all-access, and a brand new website for Tailwind UI',
-  // title: 'Tailwind UI: Templates, all-access, and a brand new website',
   title: 'Tailwind UI: Site templates, all-access, and a brand new website',
-  // title: 'Tailwind UI templates, all-access, and a brand new website',
-  // title: 'Tailwind UI templates and all-access',
-  description: `It's been a while since I've written about what we've been working on so I have a lot to share! Too much honestly — so put your swim suit on, sit back in your lounge chair, and prepare to soak up some vitamin CSS.`,
+  description: `Today we're releasing our first batch of official Tailwind CSS website templates — beautiful designs engineered into production-quality codebases, powered by Tailwind CSS and Next.js.`,
   date: '2022-06-21T15:00:00.000Z',
   authors: [adamwathan],
   image: card,
 }
 
-
-
-<!-- As someone who really loves building my own stuff, off-the-shelf templates never really worked for me. -->
-<!-- They always looked good in screenshots, but whenever I would dig into the actual code and try to make the site my own, it's always torture trying to make changes without causing the whole thing to fall apart. -->
-
-<!-- Something I've wanted to give people for a long time is a resource they can use to study how _real_ websites are built with Tailwind CSS. -->
-
-<!-- How a layout is broken down into components, what sort of APIs those components expose, how the config has been customized — all of the interesting decisions that you can't see when you just click _view source_ in the browser. -->
 
 When I was early in my programming career, I loved following [thoughtbot](https://thoughtbot.com/).
 They were always writing interesting programming articles, producing fantastic screencasts, and publishing incredible books.
@@ -43,7 +25,11 @@ How a layout is broken down into components, what sort of APIs those components 
 
 So today we're releasing our first batch of official Tailwind CSS [website templates](https://tailwindui.com/templates) — beautiful designs engineered into production-quality codebases, powered by Tailwind CSS and Next.js.
 
-<div className="my-12 aspect-[2/1] bg-gray-300 rounded-xl"></div>
+<div className="my-8">
+  <a href="https://tailwindui.com/templates">
+    <img src={templates} alt=""/>
+  </a>
+</div>
 
 We started designing these way back in March and I'm really excited to get these first five out the door so you can check them out and start playing with them:
 
