--- a/src/pages/blog/2022-06-23-tailwind-templates-and-all-access/index.mdx
+++ b/src/pages/blog/2022-06-23-tailwind-templates-and-all-access/index.mdx
@@ -1,9 +1,11 @@
 import { adamwathan } from '@/authors'
 import card from './card.jpg'
 import templates from './templates.jpg'
+import codeStructure from './code-structure.jpg'
+import allAccess from './all-access.jpg'
 
 export const meta = {
-  title: 'Tailwind UI: Site templates, all-access, and a brand new website',
+  title: 'Tailwind UI: Site templates and all-access',
   description: `Today we're releasing our first batch of official Tailwind CSS website templates — beautiful designs engineered into production-quality codebases, powered by Tailwind CSS and Next.js.`,
   date: '2022-06-21T15:00:00.000Z',
   authors: [adamwathan],
@@ -41,6 +43,12 @@ We started designing these way back in March and I'm really excited to get these
 
 We've put a ton of time and attention into both the design and the code, and everything is structured exactly the way we'd do it in a real production project. Their the perfect starting point when you don't want to start from a blank canvas, and the best way to learn how experts build modern websites with Tailwind CSS.
 
+<div className="my-8">
+  <a href="https://tailwindui.com/templates/primer">
+    <img src={codeStructure} alt=""/>
+  </a>
+</div>
+
 Each template can be purchased on its own for **$99**, or you can get all of them with [all-access](https://tailwindui.com/all-access) — the new _get-everything-we-ever-add-forever_ package we're launching today.
 
 ---
@@ -63,17 +71,15 @@ I want Tailwind UI to feel like a music festival, where you can wander from stag
 
 So we're launching a new [all-access package](https://tailwindui.com/all-access) for Tailwind UI that includes access to every template and component package that exists today and any new content we add in the future.
 
+<div className="my-8">
+  <a href="https://tailwindui.com/all-access">
+    <img src={allAccess} alt="Get Tailwind UI all-access"/>
+  </a>
+</div>
+
 It's a one-time purchase of **$299**. No subscription, no upgrade costs — if we add something new to Tailwind UI, it's yours, forever.
 
 And if you already own everything in Tailwind UI, **we've upgraded you to all-access for free**.
-
----
-
-## And we redesigned the site, again
-
-What started as figuring out how to add a new "Templates" link to the main navigation quickly spiraled out of control into a multi-month website redesign where not only did we completely redesign the site, we migrated the entire thing to [Inertia](https://inertiajs.com/).
-
-Visit the [all-new Tailwind UI website](https://tailwindui.com/) to check out the new design in all its glory, and experience the extra snappiness we got from moving to client-side routing.
 
 ---
 
