--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -14,7 +14,7 @@ export const classes = { utilities }
 
 ### All sides
 
-Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilities to set the border width for all sides of an element.
+Use the `border`, `border-0`, `border-2`, `border-4`, or `border-8` utilities to set the border width for all sides of an element.
 
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
@@ -46,7 +46,7 @@ Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilitie
 
 ### Individual sides
 
-Use the `border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side}-4`, or `.border-{side}-8` utilities to set the border width for one side of an element.
+Use the `border-{side}`, `border-{side}-0`, `border-{side}-2`, `border-{side}-4`, or `border-{side}-8` utilities to set the border width for one side of an element.
 
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
