Correct Fresh Prince lyrics (#1299)
* Correct Fresh Prince lyrics

Could there be anything more vital to this project than having the Fresh Prince lyrics correct? I don't think so. 

This proposed change alters the line "And I like to take a minute and sit right here" to "And I'd like to take a minute just sit right there". To validate:

* https://genius.com/Dj-jazzy-jeff-and-the-fresh-prince-the-fresh-prince-of-bel-air-lyrics
* https://www.songlyrics.com/pellek/yo!-home-to-bel-air-the-fresh-prince-of-bel-air-opening-theme-lyrics/
* https://freshprince.fandom.com/wiki/Yo_Home_To_Bel-Air

* Fixup lyrics a bit

Co-authored-by: Jordan Pittman <jordan@cryptica.me>

--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -21,24 +21,24 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">list-disc</span>
       <ul class="list-disc list-inside text-slate-900 dark:text-slate-200">
-        <li>Now this is a story all about how, my life got flipped turned upside down</li>
-        <li>And I like to take a minute and sit right here</li>
+        <li>Now this is a story all about how, my life got flipped-turned upside down</li>
+        <li>And I'd like to take a minute just sit right there</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
       </ul>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">list-decimal</span>
       <ul class="list-decimal list-inside text-slate-900 dark:text-slate-200">
-        <li>Now this is a story all about how, my life got flipped turned upside down</li>
-        <li>And I like to take a minute and sit right here</li>
+        <li>Now this is a story all about how, my life got flipped-turned upside down</li>
+        <li>And I'd like to take a minute just sit right there</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
       </ul>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">list-none</span>
       <ul class="list-none list-inside text-slate-900 dark:text-slate-200">
-        <li>Now this is a story all about how, my life got flipped turned upside down</li>
-        <li>And I like to take a minute and sit right here</li>
+        <li>Now this is a story all about how, my life got flipped-turned upside down</li>
+        <li>And I'd like to take a minute just sit right there</li>
         <li>I'll tell you how I became the prince of a town called Bel-Air </li>
       </ul>
     </div>
@@ -47,17 +47,17 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
 
 ```html
 <ul class="**list-disc**">
-  <li>Now this is a story all about how, my life got flipped turned upside down</li>
+  <li>Now this is a story all about how, my life got flipped-turned upside down</li>
   <!-- ... -->
 </ul>
 
 <ol class="**list-decimal**">
-  <li>Now this is a story all about how, my life got flipped turned upside down</li>
+  <li>Now this is a story all about how, my life got flipped-turned upside down</li>
   <!-- ... -->
 </ol>
 
 <ul class="**list-none**">
-  <li>Now this is a story all about how, my life got flipped turned upside down</li>
+  <li>Now this is a story all about how, my life got flipped-turned upside down</li>
   <!-- ... -->
 </ul>
 ```
