Remove `prefix` from plugin api example (#1304)

--- a/src/pages/docs/plugins.mdx
+++ b/src/pages/docs/plugins.mdx
@@ -17,7 +17,7 @@ const plugin = require('tailwindcss/plugin')
 
 module.exports = {
   plugins: [
-    plugin(function({ addUtilities, addComponents, e, prefix, config }) {
+    plugin(function({ addUtilities, addComponents, e, config }) {
       // Add your custom styles here
     }),
   ]
