Guide people toward using path resolution. (#1297)
* Guide people toward using path resolution.

In a workspace setup encouraging people to directly path into `node_modules` will result in inconsistent outcomes. Instead, rely on the system to properly identify the path of the node module, and then append the glob pattern manually.

* Update guide

Co-authored-by: Jordan Pittman <jordan@cryptica.me>

--- a/src/pages/docs/content-configuration.mdx
+++ b/src/pages/docs/content-configuration.mdx
@@ -260,6 +260,21 @@ If you've created your own reusable set of components that are styled with Tailw
 
 This will make sure Tailwind generates all of the CSS needed for those components as well.
 
+If you're working in a monorepo with workspaces, you may need to use `require.resolve` to make sure Tailwind can see your content files:
+
+```js tailwind.config.js
+  const path = require('path');
+
+  module.exports = {
+    content: [
+      './components/**/*.{html,js}',
+      './pages/**/*.{html,js}',
+>    path.join(require.resolve('@my-company/tailwind-components'), '**/*.js'),
+    ],
+    // ...
+  }
+```
+
 ### Configuring raw content
 
 If for whatever reason you need to configure Tailwind to scan some raw content rather than the contents of a file, use an object with a `raw` key instead of a path:
