--- a/src/pages/blog/2022-08-17-tailwind-framer-motion/index.mdx
+++ b/src/pages/blog/2022-08-17-tailwind-framer-motion/index.mdx
@@ -1,18 +1,13 @@
 import { adamwathan } from '@/authors'
-import card from './card.jpg'
 import pocketPreview from './pocket-preview.png'
-import codeStructure from './code-structure.jpg'
-import allAccess from './all-access.jpg'
-import templates from './templates.jpg'
 
 export const meta = {
   title: 'New Tailwind CSS + Framer Motion template and  Tailwind Jobs',
   description: `Today we're releasing our first batch of official Tailwind CSS website templates — beautiful designs engineered into production-quality codebases, powered by Tailwind CSS and Next.js.`,
   date: '2022-08-17T16:00:00.000Z',
   authors: [adamwathan],
-  image: card,
+  // image: card,
 }
-
 
 - Pocket template
 - Start with quick overview, highlighting some cool stuff
