--- a/src/pages/blog/2022-08-17-tailwind-framer-motion-template-and-tailwind-jobs/index.mdx
+++ b/src/pages/blog/2022-08-17-tailwind-framer-motion-template-and-tailwind-jobs/index.mdx
@@ -82,7 +82,7 @@ We want the job board to be a place to find React developers, Vue developers, La
 
 We've got a bunch of cool stuff in the works that will be coming out in the next few weeks:
 
-- We're almost done [Heroicons v2](https://twitter.com/steveschoger/status/1559622409136873473), with a [new website](https://twitter.com/jamesm/status/1556957434194829314) to go along with it
+- We've almost finished [Heroicons v2.0](https://twitter.com/steveschoger/status/1559622409136873473), with a [new website](https://twitter.com/jamesm/status/1556957434194829314) to go along with it
 - There's a damn beautiful [personal website template](https://twitter.com/jamesm/status/1560289211424595973) coming soon to Tailwind UI
 - [Headless UI v1.7](https://github.com/tailwindlabs/headlessui/blob/main/packages/@headlessui-react/CHANGELOG.md#unreleased) is almost ready for release
 - We've got a bunch of new components designed for Tailwind UI that we're going to start building next week
