--- a/src/pages/blog/2022-08-17-tailwind-framer-motion-template-and-tailwind-jobs/index.mdx
+++ b/src/pages/blog/2022-08-17-tailwind-framer-motion-template-and-tailwind-jobs/index.mdx
@@ -1,6 +1,7 @@
 import { adamwathan } from '@/authors'
 import pocketPreview from './pocket-preview.png'
 import tailwindJobs from './tailwind-jobs.jpg'
+import card from './card.jpg'
 
 export const meta = {
   title: 'New Tailwind CSS + Framer Motion template and Tailwind Jobs',
