--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -467,3 +467,24 @@ fullConfig.theme.boxShadow['2xl']
 ```
 
 Note that this will transitively pull in a lot of our build-time dependencies, resulting in bigger bundle client-side size. To avoid this, we recommend using a tool like [babel-plugin-preval](https://github.com/kentcdodds/babel-plugin-preval) to generate a static version of your configuration at build-time.
+
+---
+
+## TypeScript types
+
+We ship first-party TypeScript types for the `tailwind.config.js` file which give you all sorts of useful IDE support, and makes it a lot easier to make changes to your configuration without referencing the documentation quite as much.
+
+Configuration files generated with Tailwind CLI include the necessary type annotation by default, but to configure TypeScript types maually, just add the type annotation above your configuration object:
+
+```js tailwind.config.js
+/** @type {import('tailwindcss').Config} */
+module.exports = {
+  content: [
+    // ...
+  ],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+}
+```
